--- a/RowanSAC/src/main/AndroidManifest.xml
+++ b/RowanSAC/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +24,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.rowan.ieee.sac14.Settings"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="com.rowan.ieee.sac14.MainActivity"
+            android:theme="@style/settings">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.rowan.ieee.sac14.MainActivity" />
         </activity>
     </application>
 
