--- a/RowanSAC/build.gradle
+++ b/RowanSAC/build.gradle
@@ -25,4 +25,5 @@ android {
 dependencies {
 	compile 'com.android.support:appcompat-v7:19.0.0'
 	compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.google.android.gms:play-services:4.0.30'
 }
