--- a/RowanSAC/src/main/AndroidManifest.xml
+++ b/RowanSAC/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rowan.ieee.sac14"
     android:versionCode="6"
-    android:versionName="2013-11-15-b1" >
+    android:versionName="2013-11-15-b1">
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -15,6 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:debuggable="false"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.rowan.ieee.sac14.MainActivity"
@@ -23,7 +24,7 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </intent-filter>
         </activity>
         <activity
             android:name="com.rowan.ieee.sac14.Settings"
