--- a/RowanSAC/src/main/AndroidManifest.xml
+++ b/RowanSAC/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rowan.ieee.sac14"
-    android:versionCode="8"
-    android:versionName="2013-11-15-b1" >
+    android:versionCode="7"
+    android:versionName="2013-11-22-b1" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -10,6 +10,10 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -24,6 +28,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.rowan.ieee.sac14.Settings"
@@ -34,6 +43,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.rowan.ieee.sac14.MainActivity" />
         </activity>
+        <activity android:name="com.rowan.ieee.sac14.UploadPhoto"
+            android:label="Upload Photo"
+            android:parentActivityName="com.rowan.ieee.sac14.MainActivity"
+            android:theme="@style/AppTheme">
+
+            </activity>
     </application>
 
 </manifest>
