--- a/RowanSAC/src/main/AndroidManifest.xml
+++ b/RowanSAC/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rowan.ieee.sac14"
-    android:versionCode="7"
-    android:versionName="2013-11-22-b1" >
+    android:versionCode="8"
+    android:versionName="2013-12-6-b1" >
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+    <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -50,6 +52,12 @@
             android:theme="@style/AppTheme">
 
             </activity>
+        <activity android:name="com.rowan.ieee.sac14.CameraPro"
+            android:label="Take a Photo"
+            android:parentActivityName="com.rowan.ieee.sac14.MainActivity"
+            android:theme="@style/AppTheme">
+
+        </activity>
     </application>
 
 </manifest>
